update api and openapi
